--- a/views/layouts/auth.hbs
+++ b/views/layouts/auth.hbs
@@ -17,6 +17,10 @@
         <img src="/images/user-icon.png" alt="user-icon">
         <span>My page</span>
       </a>
+      <a class="nav-btn animate-btn" href="/test">
+        <img src="/images/test-icon.png" alt="test-icon">
+        <span>Test page</span>
+      </a>
     </div>
     <div class="nav-btn-right">
       <a class="nav-btn animate-btn" href="/logout">
