--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap");
 body {
-  background-color: wheat;
+  background-color: #cad5db;
   font: 14px "Josefin Sans", Helvetica, Arial, sans-serif;
   margin: 0;
+  height: 100vh;
 }
 
 body::-webkit-scrollbar {
@@ -23,6 +24,26 @@ main {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.bg-main img {
+  width: 100%;
+  height: 100%;
+}
+
+.footer {
+  position: fixed;
+  width: 100%;
+  height: 100px;
+  bottom: 0;
+  background-color: #5485A1;
+}
+
+.footer-sign {
+  color: black;
+  position: fixed;
+  bottom: 40px;
+  right: 40px;
 }
 
 .title {
@@ -55,13 +76,13 @@ input {
   text-align: center;
   width: 250px;
   height: 30px;
-  background-color: antiquewhite;
+  background-color: #abbfca;
   border: none;
   margin: 5px;
 }
 
 button {
-  background-color: tan;
+  background-color: #729CB5;
   font: 24px 'Josefin Sans', sans-serif;
   height: 50px;
   border: none;
@@ -71,10 +92,10 @@ button {
 }
 
 button:hover {
-  border-inline: 2px groove saddlebrown;
-  color: saddlebrown;
+  border-inline: 2px groove #38586B;
+  color: black;
   font-weight: 600;
-  background-color: bisque;
+  background-color: #5E8EAB;
 }
 
 .accordion-btn {
@@ -86,10 +107,10 @@ button:hover {
 
 .accordion-btn:hover {
   padding: 16px;
-  border: 2px groove saddlebrown;
-  color: saddlebrown;
+  border: 2px groove #38586B;
+  color: black;
   font-weight: 600;
-  background-color: bisque;
+  background-color: #83A8BE;
 }
 
 .accordion-panel {
@@ -104,7 +125,7 @@ button:hover {
       -ms-flex-align: center;
           align-items: center;
   width: 80%;
-  background-color: bisque;
+  background-color: #B2C9D7;
   padding: 0 18px;
   max-height: 0;
   overflow: hidden;
@@ -114,33 +135,33 @@ button:hover {
 
 .accordion-active {
   padding: 16px;
-  border: 2px groove saddlebrown;
-  color: saddlebrown;
+  border: 2px groove #38586B;
+  color: black;
   font-weight: 600;
-  background-color: antiquewhite;
+  background-color: #b1e1ff;
 }
 
 table {
   font-weight: 600;
   margin: 10px;
-  border: 2px ridge saddlebrown;
+  border: 2px ridge #38586B;
   -webkit-box-shadow: 0px 10px 10px 2px rgba(0, 0, 0, 0.5);
   box-shadow: 0px 10px 10px 2px rgba(0, 0, 0, 0.5);
 }
 
 table th {
-  background-color: tan;
+  background-color: #5E8EAB;
   font-weight: 800;
   font-size: 1.2rem;
   text-align: center;
   vertical-align: middle;
   height: 60px;
   padding: 0 20px;
-  border: 1px solid saddlebrown;
+  border: 1px solid #38586B;
 }
 
 table tr {
-  background-color: peachpuff;
+  background-color: #90b7cf;
 }
 
 table td {
@@ -179,9 +200,13 @@ table td .td-checkbox input {
   width: 20px;
 }
 
+table td .ap-users-table-td-actions {
+  min-width: 105px;
+}
+
 table .border-sides {
-  border-left: 1px solid saddlebrown;
-  border-right: 1px solid saddlebrown;
+  border-left: 1px solid #38586B;
+  border-right: 1px solid #38586B;
 }
 
 .admin-form {
@@ -200,7 +225,7 @@ table .border-sides {
   border-radius: 10px;
   min-width: 220px;
   padding: 10px;
-  background-color: peachpuff;
+  background-color: #90b7cf;
   -webkit-box-shadow: 0px 10px 10px 2px rgba(0, 0, 0, 0.5);
   box-shadow: 0px 10px 10px 2px rgba(0, 0, 0, 0.5);
 }
@@ -238,17 +263,17 @@ table .border-sides {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: peachpuff;
+  background-color: #90b7cf;
   margin: 15% auto;
   padding: 10px;
-  border: 1px solid #888;
+  border: 1px solid #38586B;
   width: 532px;
   height: auto;
   max-height: 80%;
 }
 
 .modal .modal-content .close-modal {
-  color: #aaa;
+  color: #38586B;
   float: right;
   font-size: 28px;
   font-weight: bold;
@@ -260,7 +285,7 @@ table .border-sides {
 }
 
 .modal .modal-content .close-modal:hover, .modal .modal-content .close-modal :focus {
-  color: tan;
+  color: #5E8EAB;
   text-decoration: none;
   cursor: pointer;
 }
@@ -334,6 +359,14 @@ table .border-sides {
           align-items: center;
 }
 
+.mp-elements-table-symbol {
+  text-align: center;
+}
+
+.mp-elements-table-aNum {
+  text-align: center;
+}
+
 .mp-knowledge-points {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -354,7 +387,7 @@ table .border-sides {
 }
 
 .mp-knowledge-points #points-num {
-  color: red;
+  color: #5485A1;
   font-size: 2rem;
   font-weight: 800;
   margin: 20px 0;
