--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,1 +1,7 @@
-<h1 class="title">Alloy me App</h1>
+{{!-- <h1 class="title">Alloy me App</h1> --}}
+<div class="bg-main">
+  <img src="/images/AlloyMeAppHome.png" alt="bg-img">
+</div>
+
+<div class="footer"></div>
+<div class="footer-sign">Made by Hector Martinez</div>
