--- a/views/login.hbs
+++ b/views/login.hbs
@@ -6,7 +6,7 @@
 
   <input type="password" name="password" placeholder="Input your password">
 
-  <button type="submit">Login</button>
+  <button id="login-btn" type="submit">Login</button>
 
 </form>
 
