Added footer to every page

--- a/views/layouts/noAuth.hbs
+++ b/views/layouts/noAuth.hbs
@@ -30,5 +30,8 @@
     {{{body}}}
   </main>
 
+  <div class="footer"></div>
+  <div class="footer-sign">Made by Hector Martinez</div>
+
 </body>
 </html>
