--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -21,7 +21,10 @@ main{
   @include flexCenter(column, center, center);
 }
 .bg-main{
+  // background: url("/images/AlloyMeAppBg.png");
   img{
+    position: fixed;
+    left: 0;
     width: 100%;
     height: 100%;
   };
