--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -36,7 +36,7 @@ main {
 .footer {
   position: fixed;
   width: 100%;
-  height: 100px;
+  height: 50px;
   bottom: 0;
   background-color: #5485A1;
 }
@@ -44,14 +44,14 @@ main {
 .footer-sign {
   color: black;
   position: fixed;
-  bottom: 40px;
+  bottom: 20px;
   right: 40px;
 }
 
 .title {
   font-weight: 800;
   font-size: 3rem;
-  margin: 60px 0 40px;
+  margin: 160px 0 40px;
 }
 
 h2 {
@@ -126,6 +126,7 @@ button:hover {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-bottom: 50px;
   width: 80%;
   background-color: #B2C9D7;
   padding: 0 18px;
@@ -447,6 +448,7 @@ table .border-sides {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-bottom: 50px;
 }
 
 .mp-comments-main #mp-comments-form button {
