--- a/views/myPage.hbs
+++ b/views/myPage.hbs
@@ -1,4 +1,4 @@
-<h1 class="title">{{userData.username}}'s page</h1>
+<h1 class="title">{{userName}}'s page</h1>
 
 <h2>{{#if userData.admin}} (admin){{else}} (member){{/if}}</h2>
 
