--- a/views/layouts/auth.hbs
+++ b/views/layouts/auth.hbs
@@ -39,6 +39,6 @@
   <div class="footer"></div>
   <div class="footer-sign">Made by Hector Martinez</div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </body>
 </html>
