--- a/views/layouts/noAuth.hbs
+++ b/views/layouts/noAuth.hbs
@@ -33,5 +33,6 @@
   <div class="footer"></div>
   <div class="footer-sign">Made by Hector Martinez</div>
 
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </body>
 </html>
