--- a/views/layouts/auth.hbs
+++ b/views/layouts/auth.hbs
@@ -37,7 +37,7 @@
   </main>
 
   <div class="footer"></div>
-  <div class="footer-sign">Made by Hector Martinez</div>
+  <div class="footer-sign">Made by <a class="sign" target="_blank" href="https://github.com/Thornnk">Hector Martinez</a></div>
 
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </body>
