Fixed bug with delete test modals inputs

--- a/views/adminPage.hbs
+++ b/views/adminPage.hbs
@@ -232,8 +232,8 @@
               <label for="answer">Answer: </label>
             </div>
             <div class="modal-input">
-              <input type="text" name="question" value={{question}} readonly>
-              <input type="text" name="answer" value={{answer}} readonly>
+              <input type="text" name="question" value="{{question}}" readonly>
+              <input type="text" name="answer" value="{{answer}}" readonly>
             </div>
           </div>
           <button type="submit">Delete test</button>
