Modified new test form title style to h4

--- a/views/adminPage.hbs
+++ b/views/adminPage.hbs
@@ -244,9 +244,9 @@
   {{/each}}
   </table>
 
-  {{!-- /////////// New alloy form /////////// --}}
+  {{!-- /////////// New test form /////////// --}}
   <form class="admin-form" action="/test/new" method="POST">
-    <h5>New test</h5>
+    <h4>New test</h4>
     <input type="text" name="question" placeholder="Insert new question">
     <input type="text" name="answer" placeholder="Insert answer">
     <button type="submit">Create test</button>
