--- a/views/layouts/noAuth.hbs
+++ b/views/layouts/noAuth.hbs
@@ -31,7 +31,7 @@
   </main>
 
   <div class="footer"></div>
-  <div class="footer-sign">Made by <a class="sign" target="_blank" href="https://github.com/Thornnk">Hector Martinez</a></div>
+  <div class="footer-sign">Made by <a class="sign" target="_blank" href="https://github.com/hnezado">Hector Martinez</a></div>
 
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </body>
