Updated project github links

--- a/views/layouts/auth.hbs
+++ b/views/layouts/auth.hbs
@@ -1,42 +1,50 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>AlloyMeApp</title>
-  <link rel="stylesheet" href="/stylesheets/style.css"/>
-  <link rel="stylesheet" href="/stylesheets/styles-nav-bar.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>AlloyMeApp</title>
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link rel="stylesheet" href="/stylesheets/styles-nav-bar.css" />
+  </head>
+  <body>
 
-  <nav class="nav-bar">
-    <div class="nav-btn-left">
-      <a href="/"><img class="animated-main-logo" src="images/atom.svg" alt="atom-icon"></a>
-      <a class="nav-btn animate-btn" href="/admin-page">
-        <img src="/images/user-icon.png" alt="user-icon">
-        <span>My page</span>
-      </a>
-      <a class="nav-btn animate-btn" href="/test">
-        <img src="/images/test-icon.png" alt="test-icon">
-        <span>Test page</span>
-      </a>
-    </div>
-    <div class="nav-btn-right">
-      <a class="nav-btn animate-btn" href="/logout">
-        <img src="/images/logout-icon.png" alt="logout-icon">
-        <span>Logout</span>
-      </a>
-    </div>
-  </nav>
+    <nav class="nav-bar">
+      <div class="nav-btn-left">
+        <a href="/"><img
+            class="animated-main-logo"
+            src="images/atom.svg"
+            alt="atom-icon"
+          /></a>
+        <a class="nav-btn animate-btn" href="/admin-page">
+          <img src="/images/user-icon.png" alt="user-icon" />
+          <span>My page</span>
+        </a>
+        <a class="nav-btn animate-btn" href="/test">
+          <img src="/images/test-icon.png" alt="test-icon" />
+          <span>Test page</span>
+        </a>
+      </div>
+      <div class="nav-btn-right">
+        <a class="nav-btn animate-btn" href="/logout">
+          <img src="/images/logout-icon.png" alt="logout-icon" />
+          <span>Logout</span>
+        </a>
+      </div>
+    </nav>
 
-  <main>
-    {{{body}}}
-  </main>
+    <main>
+      {{{body}}}
+    </main>
 
-  <div class="footer"></div>
-  <div class="footer-sign">Made by <a class="sign" target="_blank" href="https://github.com/hnezado">Hector Martinez</a></div>
+    <div class="footer"></div>
+    <div class="footer-sign">Made by
+      <a
+        class="sign"
+        target="_blank"
+        href="https://github.com/hnezado/AlloyMeApp"
+      >Hector Martinez</a></div>
 
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-</body>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  </body>
 </html>
